--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -2,7 +2,7 @@ import org.apache.tools.ant.filters.ReplaceTokens
 
 buildscript{
     ext {
-        springBootVer = '2.7.7'
+        springBootVer = '3.0.0'
         querydslVer = '5.0.0'
         querydslPluginVer = '1.0.10'
         springDependencyMgmtVer = '1.0.11'
@@ -140,8 +140,10 @@ dependencies {
     implementation("org.apache.commons:commons-collections4:4.4")
     implementation("org.apache.commons:commons-lang3:3.9")
 
-    implementation("com.querydsl:querydsl-jpa:${querydslVer}")
-    implementation("com.querydsl:querydsl-apt:${querydslVer}")
+    implementation "com.querydsl:querydsl-jpa:${querydslVer}:jakarta"
+    annotationProcessor "com.querydsl:querydsl-apt:${querydslVer}:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
     //STOMP 웹소캣 서버 사이드 테스트를 위한 의존성 추가
     implementation("org.springframework.boot:spring-boot-starter-mustache")
@@ -180,7 +182,7 @@ dependencies {
 
 //    compile("javax.annotation:javax.annotation-api:1.2")
 //    api("javax.annotation:javax.annotation-api:1.2")
-    implementation("jakarta.annotation:jakarta.annotation-api:1.3.5")
+//    implementation("jakarta.annotation:jakarta.annotation-api:1.3.5")
 
     implementation("org.projectlombok:lombok:1.18.20")
     annotationProcessor("org.projectlombok:lombok:1.18.20")
