--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.15.5",
+    "@mui/material": "^5.15.5",
     "axios": "^1.6.5",
     "jwt-decode": "^4.0.0",
     "openvidu-browser": "^2.29.0",
     "pinia": "^2.1.7",
+    "styled-components": "^6.1.8",
+    "sweetalert2": "^11.10.3",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
     "vuex": "^4.1.0",
@@ -25,6 +31,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vue": "^9.20.1",
     "prettier": "^3.2.3",
+    "vee-validate": "^4.12.4",
     "vite": "^5.0.8"
   }
 }
