chore: #Jira_properties->yml,private.yml_S10P12A802-132
1. application.properties를 application.yml로 변환
2. datasource 정보를 apllication-private.yml에 등록 후 gitignore에 등록.
3. com.spoparty로 디렉토리 이름 수정

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -84,9 +84,10 @@ project.ext.set("build.date", buildTime())
 processResources {
     with copySpec {
         from "src/main/resources"
-//        include "**/application*.yml"
+        include "**/application.yml"
+//        include "**/application-private.yml"
 //        include "**/application*.yaml"
-        include "**/application*.properties"
+//        include "**/application*.properties"
         project.properties.findAll().each {
             prop ->
                 if (prop.value != null) {
