--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vue": "^9.20.1",
     "prettier": "^3.2.3",
+    "sass": "^1.70.0",
     "vee-validate": "^4.12.4",
     "vite": "^5.0.8"
   }
