--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@mui/icons-material": "^5.15.5",
-    "@mui/material": "^5.15.5",
     "axios": "^1.6.5",
     "jwt-decode": "^4.0.0",
     "openvidu-browser": "^2.29.0",
@@ -31,6 +27,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vue": "^9.20.1",
     "prettier": "^3.2.3",
+    "sass": "^1.70.0",
     "vee-validate": "^4.12.4",
     "vite": "^5.0.8"
   }
