--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
+    "@mdi/font": "^7.4.47",
+    "@mdi/js": "^7.4.47",
     "@vitejs/plugin-vue": "^4.5.2",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
