--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -191,6 +191,10 @@ dependencies {
 
 //    testCompile('org.springframework.boot:spring-boot-starter-test')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
+
+    testImplementation("org.junit.vintage:junit-vintage-engine") {
+        exclude group: "org.hamcrest", module: "hamcrest-core"
+    }
 }
 
 test {
