--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "date-fns": "^3.3.0",
     "jwt-decode": "^4.0.0",
     "openvidu-browser": "^2.29.0",
     "pinia": "^2.1.7",
