--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -64,7 +64,7 @@ logging:
       springframework:
         web: DEBUG
         apache:
-          tiles: INFO
+          tiles: DEBUG
         springframework:
           boot: DEBUG
           security: DEBUG
