chore: Spring Boot 어플리케이션 포트 변경
현재 Docker 내에 운용중인 Jenkins 서버의 포트가 8080 이므로, 서버 어플리케이션의 포트를 9090으로 변경합니다.

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -3,8 +3,8 @@ build:
   date: "@build.date@"
 
 server:
-  port: 8080
-  address: localhost
+  port: 9090
+  # address: localhost
   servlet:
     contextPath: "/"
     encoding:
