--- a/jenkins/JenkinsFile
+++ b/jenkins/JenkinsFile
@@ -1,48 +1,132 @@
 pipeline {
     agent any
+    tools {
+        nodejs "nodejs"
+    }
 
     stages {
-        stage('Git Clone') {
-            steps {
-                git branch: 'backend', credentialsId: 'gitlab-eunbyeol', url: 'https://lab.ssafy.com/s10-webmobile1-sub2/S10P12A802'
-            }
-            post {
-                failure{
-                    error "Fail Cloned Repository"
+        stage ('[Git Clone]') {
+            parallel {
+                stage ('BE Clone') {
+                    steps {
+                        echo 'BE - Clone start'
+                        dir ('backend') {
+                            git branch: 'backend', credentialsId: 'gitlab-eunbyeol', url: 'https://lab.ssafy.com/s10-webmobile1-sub2/S10P12A802'
+                        }
+                    }
+                    post {
+                        success {
+                            echo 'BE - Success Cloned Repository'
+                        }
+                        failure {
+                            error "BE - Fail Cloned Repository"
+                        }
+                    }
+                }
+                stage ('FE Clone') {
+                    steps {
+                        echo 'FE - Clone start'
+                        dir ('frontend') {
+                            git branch: 'frontend', credentialsId: 'gitlab-eunbyeol', url: 'https://lab.ssafy.com/s10-webmobile1-sub2/S10P12A802'
+                        }
+                    }
+                    post {
+                        success {
+                            echo 'FE - Success Cloned Repository'
+                        }
+                        failure {
+                            error "FE - Fail Cloned Repository"
+                        }
+                    }
                 }
             }
         }
-        
-        stage('Build') {
-            steps{
-                dir('backend'){
-                    sh'''
-                        pwd
-                        chmod +x gradlew
-                        ./gradlew clean build
-                    '''
+        stage ('[Build]') {
+            parallel {
+                stage ('BE Build') {
+                    steps {
+                        echo 'BE - Build start'
+                        dir ('backend/backend') {
+                            sh'''
+                                chmod +x gradlew
+                                ./gradlew clean build
+                            '''
+                        }
+                    }
+                    post{
+                        success {
+                            echo 'BE - Success Build'
+                        }
+                        failure{
+                            error 'BE - Fail Build'
+                        }
+                    }              
+                }
+                stage ('FE Build') {
+                    steps {
+                        echo 'FE - Build start'
+                        dir('frontend/frontend'){
+                            sh'''
+                                npm install
+                                npm run build
+                            '''
+                        }
+                    }
+                    post{
+                        success {
+                            echo 'FE - Success Build'
+                        }
+                        failure{
+                            error 'FE - Fail Build'
+                        }
+                    }    
                 }
             }
-            post{
-                failure{
-                    error 'Fail Build'
-                }
-            }
+
         }
-        
-        stage('Test') {
-            steps{
-                dirs('backend'){
-                    sh'''
-                        './gradlew test'
-                    '''
-                }
-            }
-            post{
-                failure{
-                    error 'Fail Test'
+        stage ('[Test]') {
+            parallel {
+                stage ('BE Test') {
+                    steps {
+                        echo 'BE - Test start'
+                        dir ('backend/backend'){
+                            sh'''
+                                ./gradlew test
+                            '''
+                        }
+                    }
+                    post{
+                        success {
+                            echo 'BE - Success Test'
+                        }
+                        failure {
+                            error 'BE - Fail Test'
+                        }
+                    }
                 }
             }
         }
     }
+    post {
+        success {
+            script {
+                def Author_Name = sh(script: "git show -s --pretty=%an", returnStdout: true).trim()
+                mattermostSend (color: 'good',
+                message: "Succeeded: Job '${env.JOB_NAME}' [#${env.BUILD_NUMBER}] by ${Author_Name} (<${env.BUILD_URL}|Details>)",
+                endpoint: 'https://meeting.ssafy.com/hooks/6qfqc73iz7n4un3set8s6gahyc',
+                channel: 'A802-Alert'
+                )
+            }
+        }
+        failure {
+            script {
+                def Author_Name = sh(script: "git show -s --pretty=%an", returnStdout: true).trim()
+                mattermostSend (color: 'danger',
+                message: "Failed: Job '${env.JOB_NAME}' [#${env.BUILD_NUMBER}] by ${Author_Name} (<${env.BUILD_URL}|Details>)",
+                endpoint: 'https://meeting.ssafy.com/hooks/6qfqc73iz7n4un3set8s6gahyc',
+                channel: 'A802-Alert'
+                )
+            }
+        }
+    }  
 }
