--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,5 +3,5 @@ FROM node:18.19.0-alpine
 MAINTAINER HyeonWoo <gogoadl@naver.com> 
 
 RUN \
-    apt-get update && \
-    apt-get install -y vim \
+    apk update && \
+    apk add vim \
