--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -127,6 +127,8 @@ processResources {
 dependencies {
     // stmp
     implementation("org.springframework.boot:spring-boot-starter-mail")
+    // oauth2
+    implementation("org.springframework.boot:spring-boot-starter-oauth2-client")
 
     implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.4.1'
 
