chore : Docker Image에 실행파일 추가 및 entrypoint 설정

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,10 @@ FROM azul/zulu-openjdk:17
 
 MAINTAINER HyeonWoo <gogoadl@naver.com> 
 
+ARG JAR_FILE=build/libs/*.jar
+COPY ${JAR_FILE} app.jar
+ENTRYPOINT ["java","-jar","/app.jar"]
+
 RUN \
     apt-get update && \
     apt-get install -y vim \
