--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,29 +11,29 @@ services:
     #  - spring-mysql
     ports:
       - "9090:9090"
-    depends_on:
-      -  nginx
+    # depends_on:
+      # -  nginx
   frontend:
     image: gogoadl247/spoparty-frontend:latest
     container_name: frontend
     tty: true
     ports:
      - "3000:5173"
-    depends_on:
-     - nginx
-  nginx:
-    image: gogoadl247/spoparty-nginx:latest
-    container_name: nginx
-    user: root
-    environment:
-      - TZ=Asia/Seoul
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - /etc/nginx/sites-enabled/default:/etc/nginx/conf.d/default.conf
-      - /etc/letsencrypt:/etc/letsencrypt 
-    ports:
-      - "80:80"
-      - "443:443"
+    # depends_on:
+    #  - nginx
+  # nginx:
+  #   image: gogoadl247/spoparty-nginx:latest
+  #   container_name: nginx
+  #   user: root
+  #   environment:
+  #     - TZ=Asia/Seoul
+  #   volumes:
+  #     - /etc/localtime:/etc/localtime:ro
+  #     - /etc/nginx/sites-enabled/default:/etc/nginx/conf.d/default.conf
+  #     - /etc/letsencrypt:/etc/letsencrypt 
+  #   ports:
+  #     - "80:80"
+  #     - "443:443"
   # jenkins:
   #   image: jenkins/jenkins:jdk17
   #   container_name: jenkins
