--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -129,6 +129,8 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-mail")
     // oauth2
     implementation("org.springframework.boot:spring-boot-starter-oauth2-client")
+    // s3
+    implementation("org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE")
 
     implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.4.1'
 
