--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -45,7 +45,11 @@ spring:
     web:
       pageable:
         one-indexed-parameters: true
-
+  #  multiPartFile
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
 
 
 #logging
