--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         springDependencyMgmtVer = '1.0.11'
         springLoadedVer = '1.2.8'
         nodePluginVer = '1.3.1'
+        jUnitVer = "5.6.0"
     }
     repositories {
         mavenCentral()
@@ -206,6 +207,8 @@ dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:${jUnitVer}"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${jUnitVer}"
     testImplementation("com.h2database:h2")
 }
 
