chore: application-private S3 키 업데이트

--- a/backend/src/main/resources/application-private.yml
+++ b/backend/src/main/resources/application-private.yml
@@ -75,8 +75,8 @@ cloud:
     stack.auto: false
     region.static: ap-northeast-2
     credentials:
-      accessKey: access
-      secretKey: secret
+      accessKey: AKIATT55DVO6CEBMVMWS
+      secretKey: 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
 
 openvidu:
   url: https://i10a802.p.ssafy.io/
