feat : #S10P12A802-351 api prefix 설정

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 9090
   # address: localhost
   servlet:
-    contextPath: "/"
+    contextPath: "/api/"
     encoding:
       charset: UTF-8
       enabled: true
