--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -41,6 +41,7 @@ spring:
       hibernate:
       #        show-sql: true
       format_sql: true
+    open-in-view: false
   data:
     web:
       pageable:
