feat: 응원 현í진행 경기 조회 완성, 응원 정보 생성 작성 중

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -39,6 +39,7 @@ spring:
       ddl-auto: update
     properties:
       hibernate:
+        default_batch_fetch_size: 1000
       #        show-sql: true
       format_sql: true
     open-in-view: false
