--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -90,6 +90,7 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation("org.springframework.boot:spring-boot-starter-actuator")
+    implementation("org.springframework.boot:spring-boot-starter-data-redis")
     implementation("org.springframework.plugin:spring-plugin-core:2.0.0.RELEASE")
     testImplementation("org.springframework.security:spring-security-test")
     annotationProcessor("org.springframework.boot:spring-boot-starter-data-jpa")
@@ -126,6 +127,11 @@ dependencies {
 
     implementation("com.google.guava:guava:29.0-jre")
     annotationProcessor("com.google.guava:guava:29.0-jre")
+    // websocket
+   implementation 'org.webjars:stomp-websocket:2.3.3-1'
+   implementation 'org.webjars:sockjs-client:1.1.2'
+    // test
+    testImplementation("com.h2database:h2")
 
     testImplementation("com.jayway.jsonpath:json-path:2.4.0")
 
