--- a/batch/src/main/resources/application.yml
+++ b/batch/src/main/resources/application.yml
@@ -3,6 +3,11 @@ jpa:
   show-sql: false
   hibernate:
     ddl-auto: none
+
+
+  properties:
+    hibernate:
+      format_sql: true
 sql:
   init:
     continue-on-error: true
@@ -12,3 +17,11 @@ spring:
     jdbc:
       initialize-schema: never
   config.import: application-private.yml
+
+
+
+#로거 찍기
+logging:
+  level:
+    org.hibernate.SQL: debug
+    org.hibernate.orm.jdbc.bind: trace
