--- a/batch/src/main/resources/application.yml
+++ b/batch/src/main/resources/application.yml
@@ -1,23 +1,22 @@
-jpa:
-  database-platform: mariadb
-  show-sql: false
-  hibernate:
-    ddl-auto: none
-
-
-  properties:
-    hibernate:
-      format_sql: true
 sql:
   init:
     continue-on-error: true
 
 spring:
+  config.import: application-private.yml
+  jpa:
+#    database-platform: mariadb
+    show-sql: false
+    hibernate:
+#      naming:
+#        implicit-strategy: org.springframework.boot.orm.jpa.hibernate.CamelCaseToUnderscoresNamingStrategy
+      ddl-auto: none
   batch:
     jdbc:
       initialize-schema: never
-  config.import: application-private.yml
-
+  properties:
+    hibernate:
+      format_sql: true
 
 
 #로거 찍기
