feat: 축구데이터

--- a/batch/src/main/resources/application.yml
+++ b/batch/src/main/resources/application.yml
@@ -22,5 +22,5 @@ spring:
 #로거 찍기
 logging:
   level:
-    org.hibernate.SQL: debug
-    org.hibernate.orm.jdbc.bind: trace
+    org.hibernate.SQL: info
+    org.hibernate.orm.jdbc.bind: info
