--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,33 +6,27 @@ services:
     container_name: backend
     tty: true
     restart: always
-    #networks:
-    #  - vue-spring
-    #  - spring-mysql
     ports:
       - "9090:9090"
-    # depends_on:
-    # -  nginx
+    environment:
+      - TZ=Asia/Seoul
   batch:
     image: gogoadl247/spoparty-batch:latest
     container_name: batch
     tty: true
     restart: always
-    #networks:
-    #  - vue-spring
-    #  - spring-mysql
     ports:
       - "9091:9091"
-    # depends_on:
-    # -  nginx
-  frontend:
-    image: gogoadl247/spoparty-frontend:latest
-    container_name: frontend
-    tty: true
-    ports:
-     - "3000:5173"
-    # depends_on:
-    #  - nginx
+    environment:
+      - TZ=Asia/Seoul
+  # frontend:
+  #   image: gogoadl247/spoparty-frontend:latest
+  #   container_name: frontend
+  #   tty: true
+  #   ports:
+  #    - "3000:5173"
+  # depends_on:
+  #  - nginx
   # nginx:
   #   image: gogoadl247/spoparty-nginx:latest
   #   container_name: nginx
@@ -42,7 +36,7 @@ services:
   #   volumes:
   #     - /etc/localtime:/etc/localtime:ro
   #     - /etc/nginx/sites-enabled/default:/etc/nginx/conf.d/default.conf
-  #     - /etc/letsencrypt:/etc/letsencrypt 
+  #     - /etc/letsencrypt:/etc/letsencrypt
   #   ports:
   #     - "80:80"
   #     - "443:443"
@@ -67,6 +61,6 @@ services:
   #     - "4443:4443"
   #   environment:
   #     - OPENVIDU_SECRET=MY_SECRET
-    #networks:
-    #react-spring: {}
-    #spring-mysql: {}
+  #networks:
+  #react-spring: {}
+  #spring-mysql: {}
