fix : #S10P12A802-520 볼륨 설정 누락분 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - "9090:9090"
     environment:
       - TZ=Asia/Seoul
+    volume:
+      - /opt/openvidu/recordings:/opt/openvidu/recordings
   batch:
     image: gogoadl247/spoparty-batch:latest
     container_name: batch
