--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - "9090:9090"
     environment:
       - TZ=Asia/Seoul
-    volume:
+    volumes:
       - /opt/openvidu/recordings:/opt/openvidu/recordings
   batch:
     image: gogoadl247/spoparty-batch:latest
