--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@tiptap/vue-3": "^2.1.16",
     "axios": "^1.6.5",
     "date-fns": "^3.3.0",
+    "html2canvas": "^1.4.1",
     "jwt-decode": "^4.0.0",
     "openvidu-browser": "^2.29.0",
     "pinia": "^2.1.7",
