fix: 배치에러수정

--- a/batch/src/main/resources/application.yml
+++ b/batch/src/main/resources/application.yml
@@ -30,6 +30,6 @@ spring:
 logging:
   level:
     org.hibernate.SQL: INFO
-    org.hibernate.orm.jdbc.bind: trace
+#    org.hibernate.orm.jdbc.bind: trace
 
 
