--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,13 @@ services:
       - "9091:9091"
     environment:
       - TZ=Asia/Seoul
+  redis:
+    image: redis:7.2.4
+    container_name: redis
+    restart: always
+    ports:
+     - "6379:6379"
+    command: redis-server --save 60 1000 --requirepass ${REDIS_PASSWORD}
   # frontend:
   #   image: gogoadl247/spoparty-frontend:latest
   #   container_name: frontend
